# aws-simple-infrastructure-setup

./: .gitignore  README.md
cloudformation/: app-stack.json  network-stack.json  network-stack.yaml  setup-cluster.sh  stack-template.yaml
k8s/: web-client-deployment.yaml  web-client-service.yaml  web-server-deployment.yaml  web-server-service.yaml
web-client-app/: Dockerfile  index.html  nginx.conf
web-server-app/: .env  Cargo.toml  Dockerfile
web-server-app/src/: main.rs  secret_manager.rs
web-server-app/src/database/: connection.rs
