[package]
name = "web-server-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"]}
axum = "0.6.8"
tower = "0.4.12"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.9"


#aws
aws-config = "0.55.1"
